tests/snapshots/indent_operations_test__shift_right_k.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:4
Lines: 4

Buffer:
line 1
    line 2
    [l]ine 3
line 4
