tests/snapshots/indent_operations_test__shift_right_line.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 3

Buffer:
    [l]ine 1
line 2
line 3
