tests/snapshots/indent_operations_test__visual_line_dedent.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
line 1
[l]ine 2
    line 3
